@@ -7,7 +7,7 @@ _enable_jemalloc_pgo="n"
 
 
 pkgname=firefox-kde-opensuse
-pkgver=10.0.1
+pkgver=10.0.2
 pkgrel=1
 pkgdesc="Standalone web browser from mozilla.org with OpenSUSE patch, integrate better with KDE"
 arch=('i686' 'x86_64')
@@ -135,7 +135,7 @@ package() {
   #https://bugzilla.mozilla.org/show_bug.cgi?id=658850
   ln -sf firefox "$pkgdir/usr/lib/firefox/firefox-bin"
 }
-md5sums=('265c53120fd923c742164b0002ebbf6c'
+md5sums=('5ce038d591964f72c534fa33b75a62f5'
          '16378e812e79ee4791c7d64c8055149d'
          'e8c3850c1d93ffabd7f007f86e6365a8'
          'bdeb0380c7fae30dd0ead6d2d3bc5873'
