@@ -1,6 +1,6 @@
 # Contributor: Mephistopheles <mephisto.pheles.nyan @ gmail.com>
 pkgname=imule-new
-pkgver=1.4.7.1
+pkgver=2.0.1
 pkgrel=1
 pkgdesc="Anonymous P2P file sharing software"
 conflicts=('imule')
@@ -9,8 +9,8 @@ license=('GPL')
 depends=('wxgtk' 'crypto++')
 optdepends=('i2p')
 arch=('i686' 'x86_64')
-source=(http://aceini.no-ip.info/imule/1.4.7.1/iMule-1.4.7.1-src.tbz)
-md5sums=('b601e8e5cf9fe21219fc571b77126098')
+source=(http://aceini.no-ip.info/imule/${pkgver}/iMule-${pkgver}-src.tbz)
+md5sums=('be7cc1d4073625832ed29726efbed400')
 build() {
   cd $srcdir/iMule-${pkgver}-src
   ./configure --enable-debug=no --enable-optimize=yes --prefix=/usr --disable-profile  LIBS="-lpthread -lm -ldl"
