@@ -1,15 +1,16 @@
 # Maintainer: Frederik "Freso" S. Olesen <freso.dk@gmail.com>
 pkgname=lwjgl
-pkgver=2.8.2
+pkgver=2.8.3
 pkgrel=1
 pkgdesc="Lightweight Java Game Library - for use in game projects in Java."
 arch=(any)
 url="http://lwjgl.org/"
 license=('BSD')
 changelog=ChangeLog
+options=(!strip)
 source=(http://downloads.sourceforge.net/java-game-lib/$pkgname-$pkgver.zip)
-md5sums=('fb1b9ea22c26c40d21deb5a7b0fa972d')
-sha1sums=('0fd1feb18e8f0854e4e851f2e0c824e545014d35')
+md5sums=('c23a4c90e898caff00c19e5e27d8c82c')
+sha1sums=('3cc6f2ddb3be1b01d2a7736dd33a52d7fdfcd7c9')
 
 package() {
   cd "$srcdir/$pkgname-$pkgver"
