@@ -1,24 +1,24 @@
 # Maintainer: Nicolas Estibals <Nicolas.Estibals@gmail.com>
+# Contributor: gammel.holte
 pkgname=mutt-notmuch
-pkgver=20111230
+pkgver=0.2
 pkgrel=1
 pkgdesc="Notmuch (of a) helper for Mutt"
-url="http://upsilon.cc/~zack/blog/posts/2011/01/how_to_use_Notmuch_with_Mutt/"
+url="https://gitorious.org/mutt-notmuch"
 arch=('any')
 license=('GPL3')
-depends=('perl' 'perl-mailtools' 'perl-mail-box' 'notmuch')
-source=("${pkgname}::http://git.upsilon.cc/cgi-bin/gitweb.cgi?p=utils/mutt-notmuch.git;a=blob_plain;f=mutt-notmuch;hb=master")
-sha1sums=('fcb3a5b0fb6be4078c8531eb25eb0bd34919dbc8')
-
+depends=('perl' 'perl-mailtools' 'perl-mail-box' 'notmuch' 'perl-term-readline-gnu')
+source=("${pkgname}-${pkgver}.tar.gz::https://gitorious.org/${pkgname}/${pkgname}/archive-tarball/${pkgver}")
+sha1sums=('c4492469ba0351a7c9b97202a40e6b6931d9796b')
 
 
 build() {
-  cd "${srcdir}"
-  /usr/bin/core_perl/pod2man "${pkgname}" | gzip > "${pkgname}.1.gz"
+  cd "${srcdir}"/${pkgname}-${pkgname}
+  make ${pkgname}.1
 }
 
 package() {
-  cd "${srcdir}"
+  cd "${srcdir}"/${pkgname}-${pkgname}
   install -Dm755 "${pkgname}" "${pkgdir}/usr/bin/${pkgname}"
-  install -Dm644 "${pkgname}.1.gz" "${pkgdir}/usr/share/man/man1/${pkgname}.1.gz"
+  install -Dm644 "${pkgname}.1" "${pkgdir}/usr/share/man/man1/${pkgname}.1.gz"
 }
